# adopt

./: .gitignore  AdaptiveDecisionMaker.cpp  AdaptiveDecisionMaker.h  AdaptiveJegaOptimizer.cpp  AdaptiveJegaOptimizer.h  CMakeLists.txt  DakotaEnvironmentWrapper.cpp  DakotaEnvironmentWrapper.h  ForkApplicInterfaceWrapper.cpp  ForkApplicInterfaceWrapper.h  JegaDriver.cpp  JegaDriver.h  JegaEvaluator.cpp  JegaEvaluator.h  JegaEvaluatorCreator.cpp  JegaEvaluatorCreator.h  KDTree.h  MFGADriver.cpp  MFGADriver.h  MFGAEvaluator.cpp  MFGAEvaluator.h  MFGAEvaluatorCreator.cpp  MFGAEvaluatorCreator.h  Main.cpp  MultiFidelityGAOptimizer.cpp  MultiFidelityGAOptimizer.h  PythonGaussianErrorPredictor.cpp  PythonGaussianErrorPredictor.h  README.md  SimplifiedKDTree.h
gaussian_models/: __init__.py
gaussian_models/dakota_gp/: __init__.py  dakota_gp.py
